# rustjs

./: .gitignore  Cargo.toml  README.md  a.js  example.js
src/: cli.rs  diagnostic.rs  interpreter_visitor.rs  keywords.rs  main.rs  node.rs  node_type.rs  parser.rs  scanner.rs  source.rs  visitor.rs
src/bytecode/: bytecode_compiler.rs  bytecode_generator.rs  bytecode_interpreter.rs  bytecode_printer.rs  mod.rs
src/bytecode/opcodes/: mod.rs
src/globals/: math.rs  mod.rs  object.rs
src/interpreter/: ast_interpreter.rs  environment.rs  js_value.rs  mod.rs
src/nodes/: array_expression.rs  assignment_expression.rs  binary_expression.rs  block_statement.rs  boolean_literal_node.rs  break_statement.rs  call_expression.rs  class_declaration.rs  conditional_expression.rs  for_statement.rs  function_argument.rs  function_declaration.rs  function_expression.rs  function_signature.rs  identifier.rs  if_statement.rs  member_expression.rs  mod.rs  new_expression.rs  null_literal_node.rs  number_literal_node.rs  object_expression.rs  object_property.rs  program.rs  return_statement.rs  string_literal_node.rs  template_string_literal.rs  this_expression.rs  unary_expression.rs  undefined_literal_node.rs  variable_declaration.rs  while_statement.rs
src/symbol_checker/: diagnostics.rs  mod.rs  symbol_checker.rs
src/value/: function.rs  mod.rs  object.rs
