[package]
name = "js-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "0.3.0", features = ["auto-color"] }
clap = { version = "4.4.7", features = ["derive"] }
enum_dispatch = "0.3.12"
